<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome.LoginPage"
    android:background="@color/purple_logo_third">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/top_appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/on_primary_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleCentered="true"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Display1"
        app:titleTextColor="@color/white"
        >

        <ImageView
            android:id="@+id/string_logo"
            android:padding="8dp"
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/logo"
            android:src="@drawable/string_logo_sportq"/>
    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_appbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/ic_launcher_sportq" />
            <TextView
                android:id="@+id/textview_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/purple_logo"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/textview_sign_up"
                app:startIconDrawable="@drawable/baseline_account_circle_24"
                app:hintTextColor="@color/purple_logo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/account_first_name"
                    android:inputType="text"
                    android:textColor="@color/purple_logo"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_first_name"
                app:startIconDrawable="@drawable/baseline_account_circle_24"
                app:hintTextColor="@color/purple_logo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/account_last_name"
                    android:inputType="text"
                    android:textColor="@color/purple_logo"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_last_name"
                app:startIconDrawable="@drawable/ic_baseline_email_24"
                app:hintTextColor="@color/purple_logo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/purple_logo"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_new_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_email"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
                app:hintTextColor="@color/purple_logo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    android:textColor="@color/purple_logo"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_confirm_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_new_password"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
                app:hintTextColor="@color/purple_logo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textColor="@color/purple_logo"/>
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/button_sign_up"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="@color/on_primary_container"
                android:elevation="3dp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_confirm_password"
                app:rippleColor="@color/purple_first" />

            <TextView
                android:id="@+id/textview_already_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/already_have_account"
                android:textSize="14sp"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_sign_up"
                app:layout_constraintEnd_toStartOf="@+id/button_login" />

            <Button
                android:id="@+id/button_login"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="14sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textview_already_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/textview_already_account"
                app:textAllCaps="false" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>
